--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Isabela Rodrigues</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+    <title>Isabela Rodrigues Lima</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
 
-<h1>Isabela Rodrigues</h1>
-<img src="https://avatars.githubusercontent.com/u/93015684?v=4" alt="Foto da Isabela" 
-style="max-width:100%;height:auto;">
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Sobre nós</a></li>
+            <li><a href="#">Minha Conta</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+
+<h1 id="titulo">Isabela Rodrigues Lima</h1>
+
+<div id="centralizar">
+    <img id="imagem_redonda" src = "https://avatars.githubusercontent.com/u/93015684?v=4" 
+    alt="Foto da Isabela"/>
+</div>
+
 
     <a href="https://www.linkedin.com/in/isabelarodrigueslima/">LinkedIn</a>
     <a href="https://www.instagram.com/isabela.dll/">Instagram</a>
     <a href="https://github.com/BellaLima">GitHub</a>
 <div>
-<p id="para1">Olá! Sou uma estudante apaixonada por tecnologia da informação e tenho experiência em diversas linguagens 
+<p id="texto">Olá! Sou uma estudante apaixonada por tecnologia da informação e tenho experiência em diversas linguagens 
     de software, como C#, Phyton, HTML, CSS e Javascript. Adoro aprender coisas novas 
     e me desafiar a resolver problemas complexos. Tenho uma ótima comunicação e sei liderar equipes 
     com eficiência e respeito. Sou proativa e sempre busco trazer ideias criativas para os projetos que participo. 
@@ -22,9 +39,18 @@ style="max-width:100%;height:auto;">
     da sociedade através da tecnologia.</p>
 </div>
 
-<p>Formei-me na Faculdade de Tecnologia de Presidente Prudente (FATEC). Sempre fui uma aluna estudiosa e participei 
+
+
+<p id="texto">Formei-me na Faculdade de Tecnologia de Presidente Prudente (FATEC). Sempre fui uma aluna estudiosa e participei 
     de várias atividades extracurriculares. Gosto muito de aprender coisas novas e me dedico muito em tudo o que 
-    me proponho a fazer. Durante meus anos de faculdade, adquiri uma certa bagagem de experiência profissional 
+    me proponho a fazer.</p>
+
+    <div id="centralizar">
+    <img id="imagem" src="https://media.licdn.com/dms/image/C5622AQFyc5DOWxv7aQ/feedshare-shrink_1280/0/1651791460333?e=1693440000&v=beta&t=kjpI1kry9tjsO9Hn0WEEvHiNo62lLlfv2wwnPK_17JU"
+    alt="certificado da semana de tecnologia">
+    </div>
+    
+<p id="texto"> Durante meus anos de faculdade, adquiri uma certa bagagem de experiência profissional 
     estagiando em 3 empresas diferentes. Meu primeiro estágio na área da tecnologia foi na empresa Bits & Bytes. 
     Pelo tempo que passei lá, pude desenvolver habilidades das quais nem sabia que possuía, como liderança e 
     aprimoramento em boa gestão de tempo. Tornei a expedição de produtos mais eficiente ao ajustar o layout do 
