--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Isabela Rodrigues Lima</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,10 +12,8 @@
 
     <nav>
         <ul id="menu-h">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Produtos</a></li>
-            <li><a href="#">Sobre nós</a></li>
-            <li><a href="#">Minha Conta</a></li>
+            <li><a href="#">Sobre mim</a></li>
+            <li><a href="#">Experiência Profissional</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
     </nav>
@@ -26,10 +25,6 @@
     alt="Foto da Isabela"/>
 </div>
 
-
-    <a href="https://www.linkedin.com/in/isabelarodrigueslima/">LinkedIn</a>
-    <a href="https://www.instagram.com/isabela.dll/">Instagram</a>
-    <a href="https://github.com/BellaLima">GitHub</a>
 <div>
 <p id="texto">Olá! Sou uma estudante apaixonada por tecnologia da informação e tenho experiência em diversas linguagens 
     de software, como C#, Phyton, HTML, CSS e Javascript. Adoro aprender coisas novas 
@@ -65,11 +60,10 @@
     imersivo, não consigo deixar tarefas inacabadas.</p>
 
 
-    <footer>
-        <p>Footer</p>
-        <a href="https://www.linkedin.com/in/isabelarodrigueslima/">LinkedIn</a>
-        <a href="https://www.instagram.com/isabela.dll/">Instagram</a>
-        <a href="https://github.com/BellaLima">GitHub</a>
+    <footer id="centralizar">
+    <a href="https://www.instagram.com/isabela.dll/" class="circle-icons fa fa-instagram"></a>
+    <a href="https://github.com/BellaLima" class="circle-icons fa fa-github"></a>
+    <a href="https://www.linkedin.com/in/isabelarodrigueslima/" class="circle-icons fa fa-linkedin"></a>
       </footer>
 </body>
 </html>
