--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <nav>
         <ul id="menu-h">
-            <li><a href="#">Sobre mim</a></li>
-            <li><a href="#">Experiência Profissional</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#sobre">Sobre mim</a></li>
+            <li><a href="#experiencia">Experiência Profissional</a></li>
+            <li><a href="#contato">Contato</a></li>
         </ul>
     </nav>
 
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-<p id="texto">Olá! Sou uma estudante apaixonada por tecnologia da informação e tenho experiência em diversas linguagens 
+<p class="texto" id="sobre">Olá! Sou uma estudante apaixonada por tecnologia da informação e tenho experiência em diversas linguagens 
     de software, como C#, Phyton, HTML, CSS e Javascript. Adoro aprender coisas novas 
     e me desafiar a resolver problemas complexos. Tenho uma ótima comunicação e sei liderar equipes 
     com eficiência e respeito. Sou proativa e sempre busco trazer ideias criativas para os projetos que participo. 
@@ -36,7 +36,7 @@
 
 
 
-<p id="texto">Formei-me na Faculdade de Tecnologia de Presidente Prudente (FATEC). Sempre fui uma aluna estudiosa e participei 
+<p class="texto">Formei-me na Faculdade de Tecnologia de Presidente Prudente (FATEC). Sempre fui uma aluna estudiosa e participei 
     de várias atividades extracurriculares. Gosto muito de aprender coisas novas e me dedico muito em tudo o que 
     me proponho a fazer.</p>
 
@@ -44,8 +44,11 @@
     <img id="imagem" src="https://media.licdn.com/dms/image/C5622AQFyc5DOWxv7aQ/feedshare-shrink_1280/0/1651791460333?e=1693440000&v=beta&t=kjpI1kry9tjsO9Hn0WEEvHiNo62lLlfv2wwnPK_17JU"
     alt="certificado da semana de tecnologia">
     </div>
-    
-<p id="texto"> Durante meus anos de faculdade, adquiri uma certa bagagem de experiência profissional 
+
+
+<h2 id="experiencia">Experiência Profissional</h2>
+
+<p class="texto"> Durante meus anos de faculdade, adquiri uma certa bagagem de experiência profissional 
     estagiando em 3 empresas diferentes. Meu primeiro estágio na área da tecnologia foi na empresa Bits & Bytes. 
     Pelo tempo que passei lá, pude desenvolver habilidades das quais nem sabia que possuía, como liderança e 
     aprimoramento em boa gestão de tempo. Tornei a expedição de produtos mais eficiente ao ajustar o layout do 
@@ -61,6 +64,7 @@
 
 
     <footer id="centralizar">
+    <h2 id="contato">Contato</h2>
     <a href="https://www.instagram.com/isabela.dll/" class="circle-icons fa fa-instagram"></a>
     <a href="https://github.com/BellaLima" class="circle-icons fa fa-github"></a>
     <a href="https://www.linkedin.com/in/isabelarodrigueslima/" class="circle-icons fa fa-linkedin"></a>
