--- a/index.html
+++ b/index.html
@@ -9,62 +9,37 @@
 
 </head>
 <body>
-
     <nav>
         <ul id="menu-h">
-            <li><a href="#sobre">Sobre mim</a></li>
-            <li><a href="#experiencia">Experiência Profissional</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre mim</a></li>
+            <li><a href="experiencia.html">Experiência Profissional</a></li>
             <li><a href="#contato">Contato</a></li>
         </ul>
     </nav>
+    
 
-<h1 id="titulo">Isabela Rodrigues Lima</h1>
+<h1 class="titulo">Isabela Rodrigues Lima</h1>
 
 <div id="centralizar">
     <img id="imagem_redonda" src = "https://avatars.githubusercontent.com/u/93015684?v=4" 
     alt="Foto da Isabela"/>
 </div>
 
-<div>
-<p class="texto" id="sobre">Olá! Sou uma estudante apaixonada por tecnologia da informação e tenho experiência em diversas linguagens 
+<center>
+    <div>
+        <p class="texto" id="apresentacao">Olá! Sou uma estudante de tecnologia da informação e tenho experiência em diversas linguagens 
     de software, como C#, Phyton, HTML, CSS e Javascript. Adoro aprender coisas novas 
     e me desafiar a resolver problemas complexos. Tenho uma ótima comunicação e sei liderar equipes 
     com eficiência e respeito. Sou proativa e sempre busco trazer ideias criativas para os projetos que participo. 
     Meu objetivo é me tornar uma profissional de referência na área de TI e contribuir para o desenvolvimento 
     da sociedade através da tecnologia.</p>
-</div>
-
-
-
-<p class="texto">Formei-me na Faculdade de Tecnologia de Presidente Prudente (FATEC). Sempre fui uma aluna estudiosa e participei 
-    de várias atividades extracurriculares. Gosto muito de aprender coisas novas e me dedico muito em tudo o que 
-    me proponho a fazer.</p>
-
-    <div id="centralizar">
-    <img id="imagem" src="https://media.licdn.com/dms/image/C5622AQFyc5DOWxv7aQ/feedshare-shrink_1280/0/1651791460333?e=1693440000&v=beta&t=kjpI1kry9tjsO9Hn0WEEvHiNo62lLlfv2wwnPK_17JU"
-    alt="certificado da semana de tecnologia">
     </div>
-
-
-<h2 id="experiencia">Experiência Profissional</h2>
-
-<p class="texto"> Durante meus anos de faculdade, adquiri uma certa bagagem de experiência profissional 
-    estagiando em 3 empresas diferentes. Meu primeiro estágio na área da tecnologia foi na empresa Bits & Bytes. 
-    Pelo tempo que passei lá, pude desenvolver habilidades das quais nem sabia que possuía, como liderança e 
-    aprimoramento em boa gestão de tempo. Tornei a expedição de produtos mais eficiente ao ajustar o layout do 
-    posicionamento dos elementos do escritório. Também trabalhei na empresa Duesoft Sistemas, que era uma produtora 
-    de software. Lá, estagiei como auxiliar de suporte técnico, atendendo às necessidades de suporte dos clientes 
-    da empresa. Nessa empresa, pude aprimorar a minha oratória e especializar a minha abordagem direta com os 
-    clientes, entendendo suas necessidades e auxiliando-os da melhor maneira possível.
-    Em cada lugar em que pude trabalhar, sempre tive um bom relacionamento com os meus colegas de trabalho. 
-    Sou uma pessoa gentil e proativa, gosto de trabalhar sempre no modelo de trabalho em equipe, que consiste 
-    em realizar minhas tarefas e auxiliar os meus colegas de trabalho a realizar as deles. Sou uma pessoa que 
-    naturalmente lidera pessoas e tenho muita empatia. O meu foco em realizar um projeto do início ao fim é 
-    imersivo, não consigo deixar tarefas inacabadas.</p>
+</center>
 
 
     <footer id="centralizar">
-    <h2 id="contato">Contato</h2>
+    <h2 id="contato" class="titulo">Contato</h2>
     <a href="https://www.instagram.com/isabela.dll/" class="circle-icons fa fa-instagram"></a>
     <a href="https://github.com/BellaLima" class="circle-icons fa fa-github"></a>
     <a href="https://www.linkedin.com/in/isabelarodrigueslima/" class="circle-icons fa fa-linkedin"></a>
