--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
 <center>
     <div>
         <p class="texto" id="apresentacao">Olá! Sou uma estudante de tecnologia da informação e tenho experiência em diversas linguagens 
-    de software, como C#, Phyton, HTML, CSS e Javascript. Adoro aprender coisas novas 
-    e me desafiar a resolver problemas complexos. Tenho uma ótima comunicação e sei liderar equipes 
-    com eficiência e respeito. Sou proativa e sempre busco trazer ideias criativas para os projetos que participo. 
-    Meu objetivo é me tornar uma profissional de referência na área de TI e contribuir para o desenvolvimento 
-    da sociedade através da tecnologia.</p>
+        de software, como C#, Phyton, HTML, CSS e Javascript. Estou a procura de uma nova oportunidade no mercado de
+        trabalho! Tenho disponibilidade de me mudar para qualquer localidade.</p>
     </div>
 </center>
 
